Fix bug 127531: kreversi does not update score on undo.

- Keep track of score when removing a move too.

BUG: 127531


svn path=/branches/KDE/3.5/kdegames/kreversi/; revision=557535